--- a/package.json
+++ b/package.json
@@ -1,5 +1,12 @@
 {
   "private": true,
+  "keywords": [
+    "shader",
+    "next",
+    "vercel",
+    "fun",
+    "code"
+  ],
   "scripts": {
     "build": "next build",
     "dev": "next dev",
@@ -23,7 +30,10 @@
     "tailwindcss": "3.3.3",
     "typescript": "5.2.2",
     "use-debounce": "^10.0.0",
-    "zod": "^3.22.2"
+    "zod": "^3.22.2",
+    "gsap": "^3.11.3",
+    "lil-gui": "^0.17.0",
+    "ogl": "^0.0.101"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.1",
@@ -34,7 +44,13 @@
     "eslint": "^8.52.0",
     "eslint-config-next": "^14.0.0",
     "eslint-config-prettier": "9.0.0",
-    "use-debounce": "^10.0.0"
+    "use-debounce": "^10.0.0",
+    "gh-pages": "^5.0.0",
+    "glsl-noise": "^0.0.0",
+    "glslify": "^7.1.1",
+    "prettier": "^2.5.1",
+    "rollup-plugin-glslify": "^1.3.1",
+    "sass": "^1.58.0"
   },
   "engines": {
     "node": ">=18.17.0"
