--- a/package.json
+++ b/package.json
@@ -22,20 +22,23 @@
     "autoprefixer": "10.4.15",
     "bcrypt": "^5.1.1",
     "clsx": "^2.0.0",
+    "gsap": "^3.11.3",
+    "lil-gui": "^0.17.0",
     "next": "^14.0.2",
     "next-auth": "^5.0.0-beta.16",
+    "ogl": "^0.0.101",
     "postcss": "8.4.31",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "spline": "^0.0.0",
     "tailwindcss": "3.3.3",
     "typescript": "5.2.2",
     "use-debounce": "^10.0.0",
-    "zod": "^3.22.2",
-    "gsap": "^3.11.3",
-    "lil-gui": "^0.17.0",
-    "ogl": "^0.0.101"
+    "zod": "^3.22.2"
   },
   "devDependencies": {
+    "@splinetool/react-spline": "^2.2.6",
+    "@splinetool/runtime": "^1.0.93",
     "@types/bcrypt": "^5.0.1",
     "@types/react": "18.2.21",
     "@types/react-dom": "18.2.14",
@@ -44,13 +47,13 @@
     "eslint": "^8.52.0",
     "eslint-config-next": "^14.0.0",
     "eslint-config-prettier": "9.0.0",
-    "use-debounce": "^10.0.0",
     "gh-pages": "^5.0.0",
     "glsl-noise": "^0.0.0",
     "glslify": "^7.1.1",
     "prettier": "^2.5.1",
     "rollup-plugin-glslify": "^1.3.1",
-    "sass": "^1.58.0"
+    "sass": "^1.58.0",
+    "use-debounce": "^10.0.0"
   },
   "engines": {
     "node": ">=18.17.0"
