--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@splinetool/react-spline": "^2.2.6",
+    "@splinetool/runtime": "^1.0.93",
     "@heroicons/react": "^2.0.18",
     "@tailwindcss/forms": "^0.5.7",
     "@types/node": "20.5.7",
@@ -30,7 +32,6 @@
     "postcss": "8.4.31",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "spline": "^0.0.0",
     "tailwindcss": "3.3.3",
     "typescript": "5.2.2",
     "use-debounce": "^10.0.0",
@@ -50,7 +51,6 @@
     "gh-pages": "^5.0.0",
     "glsl-noise": "^0.0.0",
     "glslify": "^7.1.1",
-    "prettier": "^2.5.1",
     "rollup-plugin-glslify": "^1.3.1",
     "sass": "^1.58.0",
     "use-debounce": "^10.0.0"
